Convert databases to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316313 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/animenfo-client-gtk/Makefile
+++ b/databases/animenfo-client-gtk/Makefile
@@ -14,10 +14,10 @@ COMMENT=	AnimeNfo client with GTK support
 
 LICENSE=	GPLv2
 
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_GETTEXT=	yes
 USE_GNOME=	gtk20
-USE_PKGCONFIG=	yes
 GNU_CONFIGURE=	yes
 CPPFLAGS+=	${PTHREAD_CFLAGS} -I${LOCALBASE}/include
 CFLAGS+=	${CPPFLAGS}
