--- a/databases/mdbtools/Makefile
+++ b/databases/mdbtools/Makefile
@@ -13,10 +13,9 @@ COMMENT=	Utilities and libraries to export data from MS Access databases (.mdb)
 # To build man-pages
 BUILD_DEPENDS=	gawk:${PORTSDIR}/lang/gawk
 
-USES=		bison
+USES=		bison pkgconfig
 USE_AUTOTOOLS=	libtool
 USE_GNOME=	glib20
-USE_PKGCONFIG=	build
 WANT_GNOME=	yes
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
