--- a/deskutils/strigidaemon/Makefile
+++ b/deskutils/strigidaemon/Makefile
@@ -12,9 +12,9 @@ LIB_DEPENDS=	dbus-1:${PORTSDIR}/devel/dbus \
 		streams:${PORTSDIR}/deskutils/libstreams \
 		streamanalyzer:${PORTSDIR}/deskutils/libstreamanalyzer
 
+USES=		pkgconfig
 USE_FAM=	yes
 USE_GNOME=	libxml2
-USE_PKGCONFIG=	build
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
 
