--- a/deskutils/xfce4-generic-slider/Makefile
+++ b/deskutils/xfce4-generic-slider/Makefile
@@ -12,8 +12,8 @@ COMMENT=	Slider plugin to adjust and/or monitor any numeric variable
 
 LICENSE=	GPLv3
 
+USES=		pkgconfig
 USE_XFCE=	panel libutil libgui
-USE_PKGCONFIG=	build
 
 CFLAGS+=	`pkg-config --cflags libxfce4panel-1.0 libxfcegui4-1.0`
 LDFLAGS+=	`pkg-config --libs libxfce4panel-1.0 libxfcegui4-1.0`
