Convert dns to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316315 35697150-7ecd-e111-bb59-0022644237b5

--- a/dns/powerdns/Makefile
+++ b/dns/powerdns/Makefile
@@ -19,9 +19,9 @@ LUA_COMPS=	lua
 
 CONFLICTS=	powerdns-devel-[2-3].[0-9]*
 
+USES=		pkgconfig
 USE_GMAKE=	YES
 USE_SUBMAKE=	YES
-USE_PKGCONFIG=	build
 USE_AUTOTOOLS=	libtool
 USE_LDCONFIG=	YES
 CXXFLAGS+=	-I${LOCALBASE}/include
