Convert to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316328 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/grafx2/Makefile
+++ b/graphics/grafx2/Makefile
@@ -34,7 +34,7 @@ MAKE_ARGS+=	NOTTF=1
 .endif
 
 .if ${PORT_OPTIONS:MLUA}
-USE_PKGCONFIG=	yes
+USES+=		pkgconfig
 USE_LUA=	5.1
 .else
 MAKE_ARGS+=	NOLUA=1
