- Fix MySQL option.
PR:		177628
Submitted by:	John Marino <draco@marino.st>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316331 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/calligra/Makefile
+++ b/editors/calligra/Makefile
@@ -100,7 +100,7 @@ PLIST_SUB+=	MARBLE="@comment "
 USE_MYSQL=	yes
 PLIST_SUB+=	MYSQL=""
 .else
-CMAKE_ARGS+=	-DWITH_MySQL:BOOL=FASE
+CMAKE_ARGS+=	-DWITH_MySQL:BOOL=FALSE
 PLIST_SUB+=	MYSQL="@comment "
 .endif
 
