Convert devel to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316333 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/ORBit2/Makefile
+++ b/devel/ORBit2/Makefile
@@ -16,12 +16,12 @@ USE_BZIP2=	yes
 
 .if !defined(REFERENCE_PORT)
 
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_GETTEXT=	yes
 USE_LDCONFIG=	yes
 USE_AUTOTOOLS=	libtool
 USE_GNOME=	gnomehack libidl ltverhack referencehack
-USE_PKGCONFIG=	build
 CONFIGURE_ARGS=	--with-html-dir=${PREFIX}/share/doc \
 		--disable-gtk-doc
 CPPFLAGS+=	-I${LOCALBASE}/include
