--- a/devel/gio-fam-backend/Makefile
+++ b/devel/gio-fam-backend/Makefile
@@ -23,7 +23,7 @@ USE_XZ=		yes
 BUILD_WRKSRC=	${WRKSRC}/gio/fam
 INSTALL_WRKSRC=	${BUILD_WRKSRC}
 GNU_CONFIGURE=	yes
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_GNOME=	gnomehack _glib20
 USE_FAM=	yes
 USE_GMAKE=	yes
