--- a/devel/glibmm/Makefile
+++ b/devel/glibmm/Makefile
@@ -24,7 +24,7 @@ BUILD_DEPENDS=	gm4:${PORTSDIR}/devel/m4
 USE_GMAKE=	yes
 USE_GETTEXT=	yes
 USE_GNOME=	gnomehack glib20 ltverhack libsigc++20
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_PERL5=	yes
 USE_AUTOTOOLS=	libtool
 USE_LDCONFIG=	yes
