--- a/devel/libassa/Makefile
+++ b/devel/libassa/Makefile
@@ -12,9 +12,8 @@ MAINTAINER=	rodrigo@bebik.net
 COMMENT=	An C++ networking library and application framework
 
 GNU_CONFIGURE=	yes
-USES=	pathfix
+USES=	pathfix pkgconfig
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	yes
 PLIST_SUB=	ASSA_VERSION=${PORTVERSION:R:R}
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION:C/(\.[[:digit:]])$//}
