--- a/devel/libffi/Makefile
+++ b/devel/libffi/Makefile
@@ -23,8 +23,7 @@ BUILD_DEPENDS:=	${TEST_DEPENDS}
 
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
-USES=	pathfix
-USE_PKGCONFIG=	build
+USES=	pathfix pkgconfig
 PLIST_SUB=	PORTVERSION=${PORTVERSION}
 
 INFO=		libffi
