--- a/devel/lua-sysctl/Makefile
+++ b/devel/lua-sysctl/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	lua@FreeBSD.org
 COMMENT=	A small sysctl(3) interface for lua
 
 USE_GITHUB=	yes
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_LUA=	yes
 PLIST_FILES=	%%LUA_MODSHAREDIR%%/sysctl.lua \
 		%%LUA_MODLIBDIR%%/sysctl/core.so
