--- a/devel/ros/Makefile
+++ b/devel/ros/Makefile
@@ -33,7 +33,7 @@ RUN_DEPENDS=	${PYTHON_SITELIBDIR}/yaml/__init__.py:${PORTSDIR}/devel/py-yaml \
 USE_PYTHON=	yes
 USE_BZIP2=	yes
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	yes
+USES=		pkgconfig
 
 # rosmake does its own threading
 MAKE_JOBS_UNSAFE=	yes
