--- a/devel/zziplib/Makefile
+++ b/devel/zziplib/Makefile
@@ -1,6 +1,4 @@
-# New ports collection makefile for:   zziplib
-# Date created:        3 January 2001
-# Whom:                George Reid <greid@ukug.uk.freebsd.org>
+# Created by: George Reid <greid@ukug.uk.freebsd.org>
 #
 # $FreeBSD$
 #
@@ -21,10 +19,9 @@ BUILD_DEPENDS=	zip:${PORTSDIR}/archivers/zip
 OPTIONS_DEFINE=	SDL
 
 USE_BZIP2=	yes
-USES=	pathfix
+USES=	pathfix pkgconfig
 USE_PYTHON_BUILD=	yes
 USE_AUTOTOOLS=	libtool
-USE_PKGCONFIG=	yes
 CONFIGURE_ENV=	ac_cv_path_XMLTO=":"
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
