--- a/devel/ace/Makefile
+++ b/devel/ace/Makefile
@@ -20,9 +20,9 @@ CONFLICTS=	ace+tao-5*
 
 WRKSRC=		${WRKDIR}/ACE_wrappers
 
+USES=		pkgconfig
 USE_BZIP2=	yes
 USE_PERL5_BUILD=yes
-USE_PKGCONFIG=	build
 USE_GMAKE=	yes
 MAKE_ENV=	LD_LIBRARY_PATH="${WRKSRC}/lib" ACE_ROOT="${WRKSRC}" \
 		CROSS-COMPILE=1
