--- a/devel/clanlib/Makefile
+++ b/devel/clanlib/Makefile
@@ -26,10 +26,9 @@ LIB_DEPENDS=	jpeg:${PORTSDIR}/graphics/jpeg \
 USE_GMAKE=	yes
 USE_GCC=	4.6+
 USE_XORG=	x11
-USES=	pathfix
+USES=	pathfix pkgconfig
 USE_LDCONFIG=	yes
 USE_GL=		yes
-USE_PKGCONFIG=	yes
 USE_SQLITE=	yes
 MAKE_JOBS_SAFE=	yes
 
