--- a/devel/dbus-sharp-glib/Makefile
+++ b/devel/dbus-sharp-glib/Makefile
@@ -11,9 +11,8 @@ COMMENT=	D-Bus for .NET: GLib integration module
 BUILD_DEPENDS=	${LOCALBASE}/libdata/pkgconfig/dbus-sharp-1.0.pc:${PORTSDIR}/devel/dbus-sharp
 RUN_DEPENDS=	${LOCALBASE}/libdata/pkgconfig/dbus-sharp-1.0.pc:${PORTSDIR}/devel/dbus-sharp
 
-USES=		pathfix
+USES=		pathfix pkgconfig
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
-USE_PKGCONFIG=	build
 
 .include <bsd.port.mk>
