--- a/devel/ecore-ipc/Makefile
+++ b/devel/ecore-ipc/Makefile
@@ -19,7 +19,7 @@ USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
 USE_EFL=	ecore libtool_hack
 USE_EFL_ECORE=	con
-USE_PKGCONFIG=	yes
+USES=		pkgconfig
 USE_LDCONFIG=	yes
 BUILD_WRKSRC=	${WRKSRC}/src/lib/ecore_ipc
 INSTALL_WRKSRC=	${BUILD_WRKSRC}
