--- a/devel/glib20/Makefile
+++ b/devel/glib20/Makefile
@@ -28,7 +28,7 @@ USE_GETTEXT=	yes
 USE_ICONV=	yes
 USE_AUTOTOOLS=	libtool
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_GNOME=	gnomehack ltverhack
 USE_GMAKE=	yes
 MAKE_JOBS_SAFE=	yes
