--- a/devel/gobject-introspection/Makefile
+++ b/devel/gobject-introspection/Makefile
@@ -15,12 +15,11 @@ COMMENT=	Generate interface introspection data for GObject libraries
 BUILD_DEPENDS=	cairo-trace:${PORTSDIR}/graphics/cairo
 LIB_DEPENDS=	ffi.6:${PORTSDIR}/devel/libffi
 
-USES=		bison pathfix
+USES=		bison pathfix pkgconfig
 USE_XZ=		yes
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 USE_GNOME=	gnomehier glib20 ltverhack
-USE_PKGCONFIG=	build
 USE_PYTHON=	-2.7
 USE_GETTEXT=	yes
 USE_AUTOTOOLS=	libtool
