--- a/devel/libIDL/Makefile
+++ b/devel/libIDL/Makefile
@@ -12,12 +12,11 @@ DIST_SUBDIR=	gnome2
 MAINTAINER=	gnome@FreeBSD.org
 COMMENT=	A library for creating trees of CORBA IDL files
 
-USES=		bison pathfix
+USES=		bison pathfix pkgconfig
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_GETTEXT=	yes
 USE_GNOME=	glib20
-USE_PKGCONFIG=	build
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-html-dir=${PREFIX}/share/doc
