--- a/devel/libYGP/Makefile
+++ b/devel/libYGP/Makefile
@@ -17,9 +17,8 @@ LIB_DEPENDS=	gmp.10:${PORTSDIR}/math/gmp \
 USE_BZIP2=	yes
 USE_GCC=	4.6+
 GNU_CONFIGURE=	yes
-USES=	pathfix
+USES=	pathfix pkgconfig
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	yes
 USE_GETTEXT=	yes
 CONFIGURE_ENV=	LIBS="-L${LOCALBASE}/lib"
 CONFIGURE_ARGS=	--with-libintl-prefix=${LOCALBASE} --with-gmp\
