--- a/devel/liblognorm/Makefile
+++ b/devel/liblognorm/Makefile
@@ -13,8 +13,7 @@ LICENSE=	GPLv2
 LIB_DEPENDS=	ee:${PORTSDIR}/devel/libee \
 		estr:${PORTSDIR}/devel/libestr
 
-USE_PKGCONFIG=	build
-USES=	pathfix
+USES=	pathfix pkgconfig
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 
