--- a/devel/liblouisxml/Makefile
+++ b/devel/liblouisxml/Makefile
@@ -1,6 +1,4 @@
-# New ports collection makefile for:	liblouisxml
-# Date created:				06 Feb 2009
-# Whom:					Wen Heping <wenheping@gmail.com>
+# Created by: Wen Heping <wenheping@gmail.com>
 # $FreeBSD$
 
 PORTNAME=	liblouisxml
@@ -15,9 +13,9 @@ LIB_DEPENDS=	louis.2:${PORTSDIR}/devel/liblouis \
 		xml2.5:${PORTSDIR}/textproc/libxml2
 
 GNU_CONFIGURE=	yes
+USES=		pkgconfig
 USE_GMAKE=	yes
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	yes
 
 INFO=		liblouisxml-guide
 MAN1=		msword2brl.1 xml2brl.1
