--- a/devel/libtifiles2/Makefile
+++ b/devel/libtifiles2/Makefile
@@ -16,8 +16,7 @@ USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_GNOME=	glib20
 USE_LDCONFIG=	yes
-USE_PKGCONFIG=	build
-USES=		pathfix
+USES=		pathfix pkgconfig
 
 OPTIONS_DEFINE=	NLS
 
