--- a/devel/py-qt4-dbussupport/Makefile
+++ b/devel/py-qt4-dbussupport/Makefile
@@ -19,7 +19,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}dbus>=0.8:${PORTSDIR}/devel/py-dbus \
 
 DISTINFO_FILE=	${PYQT4_DISTINFO_FILE}
 HAS_CONFIGURE=	yes
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_PYTHON=	2.5+
 USE_QT4=	corelib qmake_build moc_build
 
