Convert e* to USES=pkgconfig
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316337 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/fxite/Makefile
+++ b/editors/fxite/Makefile
@@ -21,8 +21,8 @@ GH_ACCOUNT=	yetanothergeek
 GH_TAGNAME=	FXITE-0_91
 GH_COMMIT=	c2ecac3
 
+USES=		pkgconfig
 USE_LUA=	yes
-USE_PKGCONFIG=	build
 USE_AUTOTOOLS=	aclocal autoconf automake
 ACLOCAL_ARGS=	--force -I m4
 AUTOMAKE_ARGS=	--gnu --add-missing --copy
