--- a/editors/calligra/Makefile
+++ b/editors/calligra/Makefile
@@ -42,13 +42,12 @@ USE_ICONV=	yes
 USE_KDE4=	kactivities kdehier kdelibs kdeprefix libkdcraw nepomuk-core \
 		okular pimlibs attica automoc4 sharedmime soprano
 USE_PERL5=	yes
-USE_PKGCONFIG=	yes
 USE_QT4=	dbus designer_build gui opengl phonon porting_build qt3support \
 		qtestlib_build script sql svg webkit xml xmlpatterns \
 		moc_build qmake_build rcc_build uic_build uic3_build
 USE_SQLITE=	3
 USE_BZIP2=	yes
-USES=		cmake:outsource
+USES=		cmake:outsource pkgconfig
 CMAKE_ARGS=	-DCMAKE_INCLUDE_PATH:STRING="${QT_INCDIR} ${LOCALBASE}/include" \
 		-DIHAVEPATCHEDQT:BOOL=TRUE # To be removed with Qt 4.8.2.
 MAKE_JOBS_SAFE=	yes
