--- a/editors/texworks/Makefile
+++ b/editors/texworks/Makefile
@@ -16,7 +16,7 @@ LICENSE=	GPLv2
 BUILD_DEPENDS=	hunspell:${PORTSDIR}/textproc/hunspell
 LIB_DEPENDS=	poppler-qt4:${PORTSDIR}/graphics/poppler-qt4
 
-USE_PKGCONFIG=	build
+USES=		pkgconfig
 USE_QT4=	qmake_build gui corelib rcc_build moc_build uic_build \
 		dbus xml scripttools designer_build
 QMAKE_ARGS=	INSTALL_PREFIX=${PREFIX} \
