--- a/emulators/tme/Makefile
+++ b/emulators/tme/Makefile
@@ -22,6 +22,7 @@ LIB_DEPENDS=	pthread-stubs:${PORTSDIR}/devel/libpthread-stubs \
 		fontconfig:${PORTSDIR}/x11-fonts/fontconfig \
 		xcb:${PORTSDIR}/x11/libxcb
 
+USES=		pkgconfig
 USE_GNOME=	gdkpixbuf2 gtk20
 USE_PERL5=	yes
 USE_GMAKE=	yes
@@ -30,7 +31,6 @@ USE_GETTEXT=	yes
 USE_AUTOTOOLS=	libtool libltdl
 CONFIGURE_ENV=	ac_cv_have_isinff=no
 CONFIGURE_ARGS=	--datadir=${WRKDIR}/tmproot --disable-warnings
-USE_PKGCONFIG=	build
 USE_XORG=	pixman x11 xau xcomposite xcursor xdamage xdmcp xext xfixes \
 		xi xinerama xrandr xrender
 USE_LDCONFIG=	yes
