--- a/emulators/vice/Makefile
+++ b/emulators/vice/Makefile
@@ -25,10 +25,10 @@ LIB_DEPENDS+=	Xaw3d:${PORTSDIR}/x11-toolkits/Xaw3d
 RESTRICTED=	ROMs are copyrighted by Commodore Business Machines
 LICENSE=	GPLv2
 
+USES=		pkgconfig
 USE_XORG=	xpm ice sm xext xv xt x11 xmu
 USE_XORG+=	xrender xinerama xi xrandr xcursor xcomposite xdamage xfixes
 USE_GMAKE=	yes
-USE_PKGCONFIG=	yes
 GNU_CONFIGURE=	yes
 MAKE_ENV+=	MAKEINFOFLAGS="--no-split"
 
