--- a/finance/kmymoney-kde4/Makefile
+++ b/finance/kmymoney-kde4/Makefile
@@ -24,8 +24,7 @@ OFX_DESC=	Enable OFX plugin
 QUOTES_DESC=	Enable online price quotes
 
 USE_BZIP2=	yes
-USES=		cmake
-USE_PKGCONFIG=	build
+USES=		cmake pkgconfig
 USE_QT4=	gui dbus network phonon sql svg xml \
 		qmake_build moc_build rcc_build uic_build
 USE_KDE4=	kdehier kdeprefix automoc4 kdelibs pimlibs sharedmime
