--- a/ftp/pureadmin/Makefile
+++ b/ftp/pureadmin/Makefile
@@ -10,8 +10,8 @@ MASTER_SITES=	SF/purify/Default/${PORTVERSION}
 MAINTAINER=	c.petrik.sosa@gmail.com
 COMMENT=	Management utility for the PureFTPd
 
+USES=		pkgconfig
 USE_GNOME=	gnomehack libglade2
-USE_PKGCONFIG=	yes
 USE_FAM=	yes
 USE_GETTEXT=	yes
 USE_GMAKE=	yes
