--- a/deskutils/xfce4-notification-daemon/Makefile
+++ b/deskutils/xfce4-notification-daemon/Makefile
@@ -45,7 +45,7 @@ OPTIONS_DEFAULT=CLOSE NLS
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=		gettext
 PLIST_SUB+=	NLS=""
 .else
 PLIST_SUB+=	NLS="@comment "
