--- a/deskutils/xfce4-notifyd/Makefile
+++ b/deskutils/xfce4-notifyd/Makefile
@@ -35,7 +35,7 @@ OPTIONS_DEFINE=	NLS
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MNLS}
-USE_GETTEXT=	yes
+USES+=		gettext
 CONFIGURE_ARGS+=--enable-nls
 PLIST_SUB+=	NLS=""
 .else
