--- a/net-im/pidgin-privacy-please/Makefile
+++ b/net-im/pidgin-privacy-please/Makefile
@@ -17,8 +17,8 @@ BUILD_DEPENDS=	pidgin:${PORTSDIR}/net-im/pidgin
 RUN_DEPENDS=	pidgin:${PORTSDIR}/net-im/pidgin
 
 GNU_CONFIGURE=	yes
+USES=		gettext
 USE_GMAKE=	yes
-USE_GETTEXT=	yes
 USE_GNOME=	gtk20
 USE_LDCONFIG=	${PREFIX}/lib/pidgin
 
